ScopeParser/AST/bnf.txt
<SCRIPT> ::= (<STATEMENT> ";") * 

<STATEMENT> ::= 
      <ASSIGNMENT>
    | <VARIABLE_DEFINITION>
    | <VARIABLE_ASSIGNMENT>
    | <PARAM>
    | <OUTPUT>
    | <IMPORT>
    | <EXPORT>

<EXPORT> ::= "EXPORT" <SOURCE>  [ "AS" <STRING> ]

<SOURCE> ::= 
      <FILE_SOURCE>
    | <SELECT_QUERY>
    | <IDENTIFIER>

<IDENTIFIER> ::= <STRING>

<SELECT_QUERY> ::= "SELECT" <FIELD_SPEC> "FROM" <SELECT_SOURCE> [ <WHERE_STATEMENT> ]

<WHERE_STATEMENT> ::= "WHERE" <TS_EXPRESSION>

<TS_EXPRESSION> ::= "{{" <STRING> "}}"

<SELECT_SOURCE> ::= 
      <ALIASABLE_SOURCE>
    | <JOIN_QUERY>

<JOIN_QUERY> ::= <SELECT_SOURCE> <ALIASABLE_SOURCE> <JOIN_TYPE> "ON" <TS_EXPRESSION>

<JOIN_TYPE> ::= "INNER" | "LEFT OUTER" | "RIGHT OUTER" | "OUTER"

<ALIASABLE_SOURCE> ::= 
      <SOURCE>
    | <ALIASED_SOURCE>

<ALIASED_SOURCE> ::= <IDENTIFIER> "=" <SOURCE>

<FIELD_SPEC> ::= 
      <FIELD_LIST>
    | <STAR>

<STAR> ::= "*"

<FIELD_LIST> ::= (<FIELD> ",") * 

<FIELD> ::= 
      <ALIASED_FIELD>
    | <FIELD_VALUE>

<FIELD_VALUE> ::= 
      <INPUT_FIELD>
    | <TS_EXPRESSION>
    | <STRING_LITERAL>
    | <NUMBER_LITERAL>
    | <BOOLEAN_LITERAL>

<BOOLEAN_LITERAL> ::= <BOOL>

<NUMBER_LITERAL> ::= <DECIMAL>

<STRING_LITERAL> ::= <STRING>

<INPUT_FIELD> ::= <STRING> "." [ <STRING> ]

<ALIASED_FIELD> ::= <FIELD_VALUE> "AS" <STRING>

<FILE_SOURCE> ::= "EXTRACT" <FIELD_SPEC> "FROM" <STRING_VALUE>

<STRING_VALUE> ::= 
      <STRING_LITERAL>
    | <VARIABLE_IDENTIFIER>
    | <TS_EXPRESSION>

<VARIABLE_IDENTIFIER> ::= "@" <STRING>

<IMPORT> ::= "IMPORT" <IDENTIFIER> "{" <TYPED_FIELD> "}"

<TYPED_FIELD> ::= <STRING> ":" <STRING>

<OUTPUT> ::= "OUTPUT" <SOURCE> "TO" <STRING_VALUE>

<PARAM> ::= "PARAM" <STRING> ":" [ <PARAM_DEFAULT_VALUE> ]

<PARAM_DEFAULT_VALUE> ::= 
      <STRING_LITERAL>
    | <TS_EXPRESSION>

<VARIABLE_ASSIGNMENT> ::= "@" <STRING> "=" <VARIABLE_VALUE>

<VARIABLE_VALUE> ::= 
      <TS_EXPRESSION>
    | <STRING_LITERAL>
    | <NUMBER_LITERAL>
    | <BOOLEAN_LITERAL>
    | <VARIABLE_IDENTIFIER>

<VARIABLE_DEFINITION> ::= "@" <STRING> ":" <STRING> "=" <VARIABLE_VALUE>

<ASSIGNMENT> ::= <IDENTIFIER> "=" <SOURCE>
